--- a/Module1Assignment1/index.html
+++ b/Module1Assignment1/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="lunchApp">
   <head>
     <title>Lunch Checker</title>
     <meta charset="UTF-8">
@@ -8,26 +8,25 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
+    
   </head>
-<body>
-   <div class="container">
+<body ng-controller="mainCtrl">
+   <div class="container" >
      <h1>Lunch Checker</h1>
-
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control" ng-model="lunchItems">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="check(lunchItems)">Check If Too Much</button>
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
+           {{message}}
          </div>
    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <scipt src="app.js"></scipt>
-
-
+    <script src="./app.js"></script>
 </body>
 </html>
