--- a/Module1Assignment1/index.html
+++ b/Module1Assignment1/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
-      .message, .answered, .empty { font-size: 1.3em; font-weight: bold; }
-      .answered { color: lime;}
+      .message, .answered, .empty { font-size: 1.3em; font-weight: bold;}
+      .answered { color: limegreen;}
       .empty {color: red;}
+      .borderRed { border-color: red;}
+      .borderGreen { border-color: limegreen;}
     </style>
     
   </head>
@@ -18,7 +20,7 @@
           <div class="form-group">
               <input id="lunch-menu" type="text"
               placeholder="list comma separated dishes you usually have for lunch"
-              class="form-control" ng-model="lunchItems">
+              class="form-control" ng-model="lunchItems" ng-class="{borderRed: empty, borderGreen: answered}">
           </div>
           <div class="form-group">
               <button class="btn btn-default" ng-click="check(lunchItems)">Check If Too Much</button>
