--- a/Module2Assignment2/index.html
+++ b/Module2Assignment2/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app='ShoppingListCheckOff'>
   <head>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,25 +29,29 @@
   <div class="row">
 
     <!-- To Buy List -->
-    <div class="col-md-6">
+    <div class="col-md-6" ng-controller="toBuyCtrl as buyList">
      <h2>To Buy:</h2>
      <ul>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+       <li ng-repeat="item in buyList.items">Buy {{item.quantity}} {{item.name}}<small>(s)</small> <button class="btn btn-default" ng-click="buyList.buyItem($index);"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div class="emptyMessage">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="!buyList.items.length">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
-    <div class="col-md-6">
+    <div class="col-md-6" ng-controller="alreadyBoughtCtrl as boughtList">
      <h2>Already Bought:</h2>
      <ul>
-       <li>Bought 10 cookies</li>
+       <li ng-repeat="item in boughtList.items">Bought {{item.quantity}} {{item.name}}</li>
      </ul>
-     <div class="emptyMessage">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-if="!boughtList.items.length">Nothing bought yet.</div>
     </div>
   </div>
 </div>
-
+<script src="./angular.min.js"></script>
+<script src="./app.js"></script>
+<script src="./services/ShoppingListCheckOff.service.js"></script>
+<script src="./controllers/toBuy.controller.js"></script>
+<script src="./controllers/alreadyBought.controller.js"></script>
+</script>
 </body>
 </html>
