--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> Coursera - Angular SPAs Course</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Coursera Angular Course - Project Index</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="./narrow-jumbotron.css" rel="stylesheet">
   </head>
+
   <body>
-    <h1> This is the index </h1>
+    <div class="container" id=home>
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="#home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Coursera Angular Course</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1 class="display-3">Assignment Index</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Assignment 1 - Lunch Checker</h4>
+          <p><a href="https://pskarlas.github.io/coursera-ngspa/Module1Assignment1/">Link</a></p>
+
+          <h4>Assignment 2 - Shopping List Check off</h4>
+          <p><a href="https://pskarlas.github.io/coursera-ngspa/Module2Assignment2/">Link</a></p>
+
+          <h4>Assignment 3 - Coming soon...</h4>
+          <p><a href="#">Link</a></p>
+        </div>
+
+        <!--<div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>-->
+      </div>
+
+      <footer class="footer">
+        <p>Skarlas Panagiotis</p>
+      </footer>
+    </div> <!-- /container -->
   </body>
 </html>
