--- a/Module3Assignment3/index.html
+++ b/Module3Assignment3/index.html
@@ -17,7 +17,7 @@
       <button class="btn btn-primary" ng-click="list.search(list.term)">Narrow It Down For Me!</button>
     </div>
     <!-- found-items should be implemented as a component -->
-    <found-items></found-items>
+    <found-items the-items='list'></found-items>
   </div>
   <script src="./angular.min.js"></script>
   <script src="./app.js"></script>
