--- a/index.html
+++ b/index.html
@@ -31,22 +31,31 @@
         </nav>
         <h3 class="text-muted">Coursera Angular Course</h3>
       </div>
-      <div class="jumbotron">
+      <!--<div class="jumbotron">
         <h1 class="display-3">Assignment Index</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
-      </div>
+      </div>-->
 
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>Assignment 1 - Lunch Checker</h4>
-          <p><a href="https://pskarlas.github.io/coursera-ngspa/Module1Assignment1/">Link</a></p>
+          <p>
+            <a href="https://pskarlas.github.io/coursera-ngspa/Module1Assignment1/">Demo</a>
+            <a href="https://github.com/pskarlas/coursera-ngspa/tree/master/Module1Assignment1">Code</a>
+          </p>
 
           <h4>Assignment 2 - Shopping List Check off</h4>
-          <p><a href="https://pskarlas.github.io/coursera-ngspa/Module2Assignment2/">Link</a></p>
+          <p>
+            <a href="https://pskarlas.github.io/coursera-ngspa/Module2Assignment2/">Demo</a>
+            <a href="https://github.com/pskarlas/coursera-ngspa/tree/master/Module2Assignment2">Code</a>
+          </p>
 
-          <h4>Assignment 3 - Coming soon...</h4>
-          <p><a href="#">Link</a></p>
+          <h4>Assignment 3 - Narrow Down</h4>
+          <p>
+            <a href="https://pskarlas.github.io/coursera-ngspa/Module3Assignment3/">Demo</a>
+            <a href="https://github.com/pskarlas/coursera-ngspa/tree/master/Module3Assignment3">Code</a>
+          </p>
         </div>
 
         <!--<div class="col-lg-6">
@@ -62,7 +71,7 @@
       </div>
 
       <footer class="footer">
-        <p>Skarlas Panagiotis</p>
+        <!--<p>Skarlas Panagiotis</p>-->
       </footer>
     </div> <!-- /container -->
   </body>
