vertical space added

--- a/index.html
+++ b/index.html
@@ -36,24 +36,25 @@
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
       </div>-->
-
+      <br>
+      <br>
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>Assignment 1 - Lunch Checker</h4>
           <p>
-            <a href="https://pskarlas.github.io/coursera-ngspa/Module1Assignment1/">Demo</a>
+            <a href="https://pskarlas.github.io/coursera-ngspa/Module1Assignment1/">Demo</a> |
             <a href="https://github.com/pskarlas/coursera-ngspa/tree/master/Module1Assignment1">Code</a>
           </p>
 
           <h4>Assignment 2 - Shopping List Check off</h4>
           <p>
-            <a href="https://pskarlas.github.io/coursera-ngspa/Module2Assignment2/">Demo</a>
+            <a href="https://pskarlas.github.io/coursera-ngspa/Module2Assignment2/">Demo</a> | 
             <a href="https://github.com/pskarlas/coursera-ngspa/tree/master/Module2Assignment2">Code</a>
           </p>
 
           <h4>Assignment 3 - Narrow Down</h4>
           <p>
-            <a href="https://pskarlas.github.io/coursera-ngspa/Module3Assignment3/">Demo</a>
+            <a href="https://pskarlas.github.io/coursera-ngspa/Module3Assignment3/">Demo</a> | 
             <a href="https://github.com/pskarlas/coursera-ngspa/tree/master/Module3Assignment3">Code</a>
           </p>
         </div>
