--- a/Module3Assignment3/index.html
+++ b/Module3Assignment3/index.html
@@ -17,11 +17,8 @@
       <button class="btn btn-primary" ng-click="list.search(list.term)">Narrow It Down For Me!</button>
     </div>
     <!-- found-items should be implemented as a component -->
-<<<<<<< HEAD
-    <found-items the-items='list' on-remove=''></found-items>
-=======
-    <found-items the-items='list' on-remove='list.deleteItem(index)'></found-items>
->>>>>>> 71b7b1f7b987c6e7cba207e2383d8adb787be25e
+
+    <found-items the-items='list'></found-items>
   </div>
   <script src="./angular.min.js"></script>
   <script src="./app.js"></script>
