--- a/Module4Assignment4/index.html
+++ b/Module4Assignment4/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Browse our Delicious menu</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
