--- a/Module4Assignment4/src/spinner/spinner.component.template.html
+++ b/Module4Assignment4/src/spinner/spinner.component.template.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" style="text-align:center">
   <img 
-    src="images/wheel2.gif" 
+    src="images/wheel.gif" 
     class="loadingIcon" 
     alt="loading" 
     ng-if="$ctrl.showSpinner"
